--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ nav a {
     color: #0d7162;
     font-size: 20px;
     font-weight: bolder;
+    font-family: 'Comic Sans MS', cursive
 }
 nav a:hover {
     color: #ffcc00;
